product cards and slider are set up.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <link rel="stylesheet" href="https://use.typekit.net/znk8zqw.css">
   </head>
   <body>
-    <div class="row">
+    <div class="row25">
       <h1>MOVE LIKE A BUTTERFLY <br> STING LIKE A BEE</h1>
+    </div>
+    <div class="row75">
+      <div class="col15">
+        <div class="bar"></div>
+      </div>
+      <div class="col85">
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+      </div>
     </div>
   </body>
 </html>
